Überarbeitung des Ping-Plugins